--- a/bio.html
+++ b/bio.html
@@ -10,20 +10,20 @@
 </head>
 <body>
     <header>
-        <h1 class='p-2 text-info shadow-lg text-center bg-dark'>John Grimek</h1>
+        <h1 class='p-4 text-info shadow-lg text-center bg-dark'>John Grimek</h1>
         <nav class='d-flex bg-light justify-content-center navbar nav-pills'>
             <ul class='nav'>
                 <li class='nav-item'>
                     <a class='nav-link' href="./home.html">Home</a> </li>
                 <li class='nav-item'>
-                    <a class='nav-link' href="./bio.html">Bio</a></li>
+                    <a class='nav-link active' href="./bio.html">Bio</a></li>
                 <li>
                     <a class='nav-link' href="./gallery.html">Image Gallery</a></li>
             </ul>
         </nav>
     </header>
     </header>
-    <section>
+    <section class="bio-grid">
         <div>
         <!-- empty grid cell -->
         </div>
