--- a/bio.html
+++ b/bio.html
@@ -14,7 +14,7 @@
         <nav class='d-flex bg-light justify-content-center navbar nav-pills'>
             <ul class='nav'>
                 <li class='nav-item'>
-                    <a class='nav-link' href="./home.html">Home</a> </li>
+                    <a class='nav-link' href="./index.html">Home</a> </li>
                 <li class='nav-item'>
                     <a class='nav-link active' href="./bio.html">Bio</a></li>
                 <li>
@@ -84,7 +84,7 @@
             <!-- empty grid cell -->
             </div>
             <div class="card w-100" style="width: 18rem;">
-                <img src="http://musclememory.com/magCovers/md/md0101.jpg" class="card-img-top" alt="...">
+                <img src="https://musclememory.com/magCovers/md/md0101.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <p class="card-text">Grimek on the cover of the first edition of Muscular Development, January 1964.</p>
                 </div>
